k8s/network-policy/busybox-label.yml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: loch
  labels:
    access: "true"
spec:
  containers:
  - name: busybox
    image: busybox:1.28.4 # latest version has problem
    command:
    - sleep
    - "3600"
