k8s/network-policy/allow-all-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
  namespace: loch
spec:
  podSelector: {}
  policyTypes: ["Ingress"]
  ingress:
  - {}  # allow all
