k8s/network-policy/deny-all-egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-egress
  namespace: loch
spec:
  podSelector: {}
  policyTypes: ["Egress"]
