k8s/network-policy/ingress-rule.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-httpd
  namespace: loch
spec:
  podSelector: 
    matchLabels:
      run: httpd
  policyTypes: ["Ingress"]
  ingress:  # allow
  - from:
    - ipBlock:
        cidr: 10.42.0.0/16
        except:
        - 10.42.0.0/24
        - 10.42.1.0/24
    - podSelector:
        matchLabels:
          access: "true"
    ports:
    - protocol: TCP
      port: 80
